# HyprCenter

./: .gitignore  lsan.supp  main.cpp  meson.build  run_build_and_start.sh  run_build_and_tests.sh  uninstall.sh
content/system-ui/: System.ui  system.cpp
include/: App.hpp  DisplayManager.hpp  PluginLoader.hpp  PluginScanner.hpp  UserInterface.hpp  UserInterfaceProvider.hpp
resources/: HyprCenter.ui
src/: App.cpp  DisplayManager.cpp  PluginLoader.cpp  PluginScanner.cpp  UserInterfaceProvider.cpp  main.cpp  meson.build
tests/: meson.build  tests_main.cpp
